--- a/gitlab/redis-deployment.yml
+++ b/gitlab/redis-deployment.yml
@@ -1,10 +1,13 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: gitlab-redis
   namespace: gitlab
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      name: gitlab-redis
   template:
     metadata:
       labels:
